Bugfix: Globals setting legacy gradient visible in overscroll background

--- a/app/globals.css
+++ b/app/globals.css
@@ -123,12 +123,7 @@ html {
 
 body {
     color: rgb(var(--foreground-rgb));
-    background: linear-gradient(
-            to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))
-        )
-        rgb(var(--background-start-rgb));
+    background-color: hsl(var(--background));
     font-feature-settings: "kern" 1, "liga" 1, "calt" 1;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
